# pulumi-talos

./: .ci-mgmt.yaml  .drone.yml  .gitignore  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  Makefile  README.md  devbox.json  go.work  go.work.sum  mise.toml
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_talos/: __init__.py  _enums.py  _inputs.py  cluster_config.py  cluster_secrets.py  get_kube_config.py  node_apply_config.py  node_bootstrap.py  outputs.py  provider.py
sdk/python/pulumi_xyz/: __init__.py  provider.py  random.py
sdk/python/pulumiverse_talos/: README.md  __init__.py  _inputs.py  _utilities.py  get_image_factory_extensions_versions.py  get_image_factory_overlays_versions.py  get_image_factory_urls.py  get_image_factory_versions.py  image_factory_schematic.py  outputs.py  provider.py  pulumi-plugin.json
sdk/python/pulumiverse_talos/client/: __init__.py  _inputs.py  configuration.py  get_configuration.py  outputs.py
sdk/python/pulumiverse_talos/cluster/: __init__.py  _inputs.py  get_health.py  get_kubeconfig.py  health.py  kubeconfig.py  outputs.py
sdk/python/pulumiverse_talos/config/: __init__.pyi  vars.py
sdk/python/pulumiverse_talos/imagefactory/: __init__.py  _inputs.py  get_extensions_versions.py  get_overlays_versions.py  get_urls.py  get_versions.py  outputs.py  schematic.py
sdk/python/pulumiverse_talos/machine/: __init__.py  _inputs.py  bootstrap.py  configuration.py  configuration_apply.py  (+5 more)
sdk/python/siderolabs_pulumi_talos/: README.md  __init__.py  _utilities.py  pulumi-plugin.json
(+528 files in other folders)
