[project]
  name = "pulumiverse_talos"
  description = "A Pulumi package for creating and managing Talos Linux machines and clusters."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "talos", "category/infrastructure"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0a0+dev"
  [project.license]
    text = "MPL-2.0"
  [project.urls]
    Homepage = "https://www.talos.dev"
    Repository = "https://github.com/pulumiverse/pulumi-talos"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumiverse_talos = ["py.typed", "pulumi-plugin.json"]
